Fix meta box help icon alignment #1956

--- a/css/modules/aioseop_module.css
+++ b/css/modules/aioseop_module.css
@@ -135,7 +135,6 @@ div.aioseop_tip_icon:before {
 .aioseop_tabs .aioseop_meta_box_help,
 .aioseop_tabs .aioseop_meta_box_help:active {
 	margin-top: 4px;
-	margin-right: 45px;
 }
 
 .aioseop_label {
